--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 filetype==1.2.0
-gradio==3.50.2
 numpy==1.26.4
 onnx==1.16.0
 onnxruntime==1.17.3
@@ -15,3 +14,4 @@ torchsde
 imageio_ffmpeg
 kornia
 spandrel
+librosa
