--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 filetype==1.2.0
 numpy==1.26.4
 onnx==1.16.0
-onnxruntime==1.17.3
+onnxruntime
+onnxruntime-gpu
 opencv-python==4.9.0.80
 psutil==5.9.8
 tqdm==4.66.4
