--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,7 @@ imageio_ffmpeg
 kornia
 spandrel
 librosa
-numpy==1.22.0;python_version<="3.10"
-numpy>=1.24.3;python_version>"3.10"
+numpy
 cython>=0.29.30
 scipy>=1.11.2
 torch>=2.1
@@ -24,8 +23,7 @@ torchaudio
 soundfile>=0.12.0
 librosa>=0.10.0
 scikit-learn>=1.3.0
-numba==0.55.1;python_version<"3.9"
-numba>=0.57.0;python_version>="3.9"
+numba>=0.57.0
 inflect>=5.6.0
 tqdm>=4.64.1
 anyascii>=0.3.0
